--- a/notebooks/useful_methods/borges_first_pass.ipynb
+++ b/notebooks/useful_methods/borges_first_pass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,51 +24,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./datasets/borges.txt','r',encoding='utf8') as f:\n",
+    "with open('./datasets/borges_full.txt','r',encoding='utf8') as f:\n",
     "    text = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El Aleph\n",
-      "[Cuento. Texto completo]\n",
       "\n",
-      "O God, | could be bounded in a nutshell\n",
-      "and count myself a King of infinite space\n",
       "\n",
-      "Hamiet, ll, 2\n",
+      "JORGE LUIS BORGES \n",
       "\n",
-      "But they will teach us that Eternity is the\n",
-      "Standing still of the Present Time, a\n",
-      "Nunc-stans (ast the Schools call it);\n",
       "\n",
-      "which neither they, nor any else\n",
-      "understand, no more than they would a\n",
-      "Hic-stans for an Infinite greatnesse of\n",
-      "Place.\n",
+      "1929: Segundo Premio Municipal de Li- \n",
+      "teratura. \n",
       "\n",
-      "Leviathan, IV, 46\n",
+      "1944: Gran Premio de Honor de ia So- \n",
+      "ciedad Argentina de Escritores. \n",
       "\n",
-      "La candente mafana de febrero en que Beatriz Viterbo muriéd, después de una\n",
-      "imperiosa agonia que no se rebaj6 un solo instante ni al sentimentalismo ni al\n",
-      "miedo, noté que las carteleras de fierro de la Plaza Constituci6n habian\n",
-      "renovado no sé qué aviso de cigarrillos rubios; el hecho me doliéd, pues\n",
-      "comprendi que el incesante y vasto universo ya se apartaba de ella y que ese\n",
-      "cambio era el primero de una serie infinita. Cambiara el universo pero yo no,\n",
-      "pensé con melancélica vanidad; alguna vez, lo sé, mi vana devocidén la habia\n",
-      "exasperado; muerta yo podia consagrarme a su memoria, sin esperanza, pero\n",
-      "t\n"
+      "1949: Miembro de la Academia Goethea- \n",
+      "na de San Pablo, Brasil. \n",
+      "\n",
+      "1950: Presidente de la Sociedad Argen- \n",
+      "tina de Escritores (hasta 1953), \n",
+      "\n",
+      "1955: Director de i a Biblioteca Na- \n",
+      "cional (hasta 1973). \n",
+      "\n",
+      "Miembro de número de la Academia \n",
+      "Argentina de Letras, \n",
+      "\n",
+      "Director del Instituto de Literatura \n",
+      "í Alemana de la Facultad de Filosofía y \n",
+      "! Letras de la Universidad de Buenos \n",
+      "Aires. \n",
+      "\n",
+      "1956: Primer Premio Nacional de Lite- \n",
+      "ratura. \n",
+      "\n",
+      "Doctor honorís causa de ia Universi- \n",
+      "dad de Cuyo (Mendoza), \n",
+      "\n",
+      "Profesor titular de Literatura Inglesa \n",
+      "y Norteamericana de la Facultad de Fi- \n",
+      "losofía y Letras de la Universidad de \n",
+      "Buenos Aires, \n",
+      "\n",
+      "i \n",
+      "\n",
+      "1961: Premio Internacional de Literatu- \n",
+      "ra Formentor, Mallorca. \n",
+      "\n",
+      "Commsndatore del Gobierno de Ita- \n",
+      "lia. \n",
+      "\n",
+      "1962: Commandeur da 1‘Ordre des \n",
+      "L&ttres et des Arta del Gobierno de \n",
+      "Francia. \n",
+      "\n",
+      "1963: Gran Premio del Fondo \n"
      ]
     }
    ],
@@ -78,43 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "89845"
+       "131"
       ]
      },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Encode Entire Text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "91"
-      ]
-     },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,43 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "decoder = dict(enumerate(all_characters))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoder = {char: ind for ind,char in decoder.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "decoder = dict(enumerate(all_characters))\n",
+    "encoder = {char: ind for ind,char in decoder.items()}\n",
     "encoded_text = np.array([encoder[char] for char in text])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## One Hot Encoding\n",
-    "\n",
-    "As previously discussed, we need to one-hot encode our data inorder for it to work with the network structure. Make sure to review numpy if any of these operations confuse you!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,43 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [1., 0., 0.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "one_hot_encoder(np.array([1,2,0]),3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "--------------\n",
-    "---------------\n",
-    "# Creating Training Batches\n",
-    "\n",
-    "We need to create a function that will generate batches of characters along with the next character in the sequence as a label.\n",
-    "\n",
-    "-----------------\n",
-    "------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +175,7 @@
        "(10, 50)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +326,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,23 +337,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " size of generator 89\n"
+      " size of generator 2045\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(8984,)"
+       "(204531,)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,55 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0 Step: 925 Val Loss: 2.434739351272583\n",
-      "Epoch: 0 Step: 950 Val Loss: 2.4692535400390625\n",
-      "Epoch: 0 Step: 975 Val Loss: 2.4389488697052\n",
-      "Epoch: 1 Step: 1000 Val Loss: 2.4706244468688965\n",
-      "Epoch: 1 Step: 1025 Val Loss: 2.4445385932922363\n",
-      "Epoch: 1 Step: 1050 Val Loss: 2.4017136096954346\n",
-      "Epoch: 1 Step: 1075 Val Loss: 2.431654214859009\n",
-      "Epoch: 2 Step: 1100 Val Loss: 2.3836922645568848\n",
-      "Epoch: 2 Step: 1125 Val Loss: 2.4076969623565674\n",
-      "Epoch: 2 Step: 1150 Val Loss: 2.361847400665283\n",
-      "Epoch: 3 Step: 1175 Val Loss: 2.431674003601074\n",
-      "Epoch: 3 Step: 1200 Val Loss: 2.3702139854431152\n",
-      "Epoch: 3 Step: 1225 Val Loss: 2.334181547164917\n",
-      "Epoch: 3 Step: 1250 Val Loss: 2.3916594982147217\n",
-      "Epoch: 4 Step: 1275 Val Loss: 2.3287582397460938\n",
-      "Epoch: 4 Step: 1300 Val Loss: 2.3346707820892334\n",
-      "Epoch: 4 Step: 1325 Val Loss: 2.303309679031372\n",
-      "Epoch: 5 Step: 1350 Val Loss: 2.361212968826294\n",
-      "Epoch: 5 Step: 1375 Val Loss: 2.3097176551818848\n",
-      "Epoch: 5 Step: 1400 Val Loss: 2.324138879776001\n",
-      "Epoch: 5 Step: 1425 Val Loss: 2.3432059288024902\n",
-      "Epoch: 6 Step: 1450 Val Loss: 2.327937126159668\n",
-      "Epoch: 6 Step: 1475 Val Loss: 2.308730125427246\n",
-      "Epoch: 6 Step: 1500 Val Loss: 2.2437031269073486\n",
-      "Epoch: 7 Step: 1525 Val Loss: 2.323357343673706\n",
-      "Epoch: 7 Step: 1550 Val Loss: 2.251192569732666\n",
-      "Epoch: 7 Step: 1575 Val Loss: 2.333263635635376\n",
-      "Epoch: 7 Step: 1600 Val Loss: 2.308624744415283\n",
-      "Epoch: 8 Step: 1625 Val Loss: 2.334280490875244\n",
-      "Epoch: 8 Step: 1650 Val Loss: 2.3223607540130615\n",
-      "Epoch: 8 Step: 1675 Val Loss: 2.2248430252075195\n",
-      "Epoch: 8 Step: 1700 Val Loss: 2.3244810104370117\n",
-      "Epoch: 9 Step: 1725 Val Loss: 2.3253579139709473\n",
-      "Epoch: 9 Step: 1750 Val Loss: 2.256516456604004\n",
-      "Epoch: 9 Step: 1775 Val Loss: 2.236208438873291\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "optimizer = torch.optim.Adam(model.parameters(),lr=0.001)\n",
     "criterion = nn.CrossEntropyLoss()\n",
@@ -769,9 +663,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p38",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -783,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
