--- a/notebooks/useful_methods/data_manipulation_methods.ipynb
+++ b/notebooks/useful_methods/data_manipulation_methods.ipynb
@@ -134,7 +134,7 @@
     }
    ],
    "source": [
-    "#normalize data\n",
+    "#scale and normalize data\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
@@ -149,6 +149,59 @@
     "plt.legend(loc=\"best\")\n",
     "plt.grid()"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# one-hot encoding of characters\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# one-hot encoding of words\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# create sliding window for regression prediction using rnns"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "# create sliding window for words\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
