--- a/notebooks/useful_methods/borges_token_level.ipynb
+++ b/notebooks/useful_methods/borges_token_level.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -18,13 +22,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -49,7 +57,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "with open('./datasets/borges_full.txt','r',encoding='utf8') as f:\n",
@@ -560,9 +572,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_p38",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -574,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
