--- a/notebooks/useful_methods/tensor_methods.ipynb
+++ b/notebooks/useful_methods/tensor_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -14,15 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5]\n",
-      "tensor([1, 2, 3, 4, 5], dtype=torch.int32)\n",
-      "tensor([1, 2, 3, 4, 5])\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# numpy arrays to tensors\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m arr \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39marange(\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m6\u001B[39m)\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(arr)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(torch\u001B[38;5;241m.\u001B[39mIntTensor(arr))\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -39,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "torch.Tensor"
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[9.7460e-32, 1.4013e-45, 9.0726e-32],\n",
-      "        [1.4013e-45, 3.6796e-33, 1.4013e-45]])\n",
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n",
       "tensor([[0., 0., 0.],\n",
       "        [0., 0., 0.]])\n"
      ]
@@ -87,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "tensor([[0, 0, 0],\n        [0, 0, 0]], dtype=torch.int32)"
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
